<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/selling_offer_view_width"
    android:layout_height="@dimen/selling_offer_view_height"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/sellingOfferDesiredSellPriceTextView"
        style="@style/sellingOfferTextViewStyle"
        android:text="@string/selling_offer_desired_sell_price_string"/>

    <TextView
        android:id="@+id/sellingOfferSuggestedSellPriceTextView"
        style="@style/sellingOfferTextViewStyle"
        android:text="@string/selling_offer_suggested_sell_price_string"/>

    <TextView
        android:id="@+id/sellingOfferEstimatedMortageTextView"
        style="@style/sellingOfferTextViewStyle"
        android:text="@string/selling_offer_estimated_mortage_string"/>

    <TextView
        android:id="@+id/sellingOfferTypicalWithRealsyTextView"
        style="@style/sellingOfferTextViewStyle"
        android:text="@string/selling_offer_typical_with_realsy_string"/>

    <TextView
        android:id="@+id/sellingOfferNetTextView"
        style="@style/sellingOfferTextViewStyle"
        android:text="@string/selling_offer_net_string"/>

</LinearLayout>