<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/introViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/into_title_box_margin_top"
        android:background="@color/intro_title_box_bg_color"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/introTitleMainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/intro_title_main_1"
            android:textSize="@dimen/intro_title_main_text_size" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/introTitleSubTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/intro_title_sub_1"
            android:textSize="@dimen/intro_title_sub_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/skipIntroButton"
        android:layout_width="@dimen/intro_next_button_width"
        android:layout_height="@dimen/intro_next_button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:background="@color/intro_next_button_bg_color"
        android:gravity="center"
        android:paddingTop="5dip"
        android:text="@string/next"
        android:textColor="@color/intro_next_button_text_color"
        android:textSize="21sp" />

    <io.ideaction.raelsy.widgets.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:padding="2dp"
        app:fillColor="@android:color/black"
        app:radius="4dp"
        app:strokeColor="@android:color/white" />

</RelativeLayout>