<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_image" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileMainImageView"
        android:layout_width="@dimen/profile_image_width"
        android:layout_height="@dimen/profile_image_height"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/profile_image_top_margin"
        android:clickable="true"
        android:elevation="5dp"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="3dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="@dimen/profile_field_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileMainImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/profileInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="4dp"
            android:hint="@string/profile_name_edittext_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="11dp"
            android:textColor="@color/registration_text_color"
            android:textColorHint="@color/registration_text_color"
            android:textSize="@dimen/profile_text_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phone"
        android:layout_width="@dimen/profile_field_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/profileInputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="4dp"
            android:hint="@string/profile_phone_edittext_hint"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingBottom="11dp"
            android:textColor="@color/registration_text_color"
            android:textColorHint="@color/registration_text_color"
            android:textSize="@dimen/profile_text_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="@dimen/profile_field_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/profileInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="4dp"
            android:hint="@string/profile_email_edittext_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="11dp"
            android:textColor="@color/registration_text_color"
            android:textColorHint="@color/registration_text_color"
            android:textSize="@dimen/profile_text_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="@dimen/profile_field_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/profileInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="4dp"
            android:hint="@string/profile_password_edittext_hint"
            android:imeOptions="actionSend"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="11dp"
            android:textColor="@color/registration_text_color"
            android:textColorHint="@color/registration_text_color"
            android:textSize="@dimen/profile_text_size" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/profileSubmitButton"
        android:layout_width="@dimen/register_by_mail_field_width"
        android:layout_height="@dimen/register_by_mail_submit_button_height"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/input_layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_by_mail_submit_btn_bg_selector"
        android:text="@string/profile_submit_button"
        android:textAllCaps="true"
        android:textColor="@color/register_by_mail_submit_btn_text_color_selector"
        android:textSize="16sp"
        android:visibility="invisible" />


</RelativeLayout>